starting to rename css classes and ids to lowercase-hyphen

--- a/assets/checkout.scss.liquid
+++ b/assets/checkout.scss.liquid
@@ -1,60 +1,60 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald);
-
-.appheader {
-	font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  	background: #0d8dff;
-}
-
-.shop {
-  float: none;
-  text-align: center;
-}
-
-.shop__logo {
-  margin: 0 auto;
-}
-
-.shop__name {
-  color: #ffffff;
-}
-
-.payment-due__price {
-  color: #000000;
-}
-
-.payment-due__currency {
-  display: none;
-}
-
-.order-summary__section {
-  background: #edece6;
-}
-
-.btn {
-  background: #0d8dff;
-}
-
-
-.btn:hover  {
-  background: #00db67;
-}
-
-.field.field--focus {
-  box-shadow: 0 0 0 2px #0d8dff;
- }
-
-.more  {
-  color: #0d8dff;
-}
-
-.more:hover  {
-  color: #0d8dff;
-}
-
-.alternative-payment-methods {
-  display: none
-}
-
-.paypal {
-  display: none
-}
+// @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i');
+//
+// .appheader {
+// 	font-family: "Josefin Sans", sans-serif;
+//   background: #0d8dff;
+// }
+//
+// .shop {
+//   float: none;
+//   text-align: center;
+// }
+//
+// .shop__logo {
+//   margin: 0 auto;
+// }
+//
+// .shop__name {
+//   color: #ffffff;
+// }
+//
+// .payment-due__price {
+//   color: #000000;
+// }
+//
+// .payment-due__currency {
+//   display: none;
+// }
+//
+// .order-summary__section {
+//   background: #edece6;
+// }
+//
+// .btn {
+//   background: #0d8dff;
+// }
+//
+//
+// .btn:hover  {
+//   background: #00db67;
+// }
+//
+// .field.field--focus {
+//   box-shadow: 0 0 0 2px #0d8dff;
+//  }
+//
+// .more  {
+//   color: #0d8dff;
+// }
+//
+// .more:hover  {
+//   color: #0d8dff;
+// }
+//
+// .alternative-payment-methods {
+//   display: none
+// }
+//
+// .paypal {
+//   display: none
+// }
