--- a/assets/css-appbody.scss.liquid
+++ b/assets/css-appbody.scss.liquid
@@ -4,7 +4,7 @@ $content-min-width: 2 * $cell + 3 * $cell-margin;
 $breakpoint: {{ settings.breakpoint }};
 
 // Shared properties
-#appbody {
+#app-body {
   flex-direction: wrap;
   padding: 0;
   margin: 0;
