--- a/assets/css-debug.scss.liquid
+++ b/assets/css-debug.scss.liquid
@@ -1,6 +1,6 @@
 /* DEBUG */
 
-#sidebarleft {
+#sidebar-menu {
   // background-color: lightsalmon;
 }
 
@@ -13,11 +13,11 @@
   // background-color: lightgreen;
 }
 
-#appheader {
+#app-header {
   // background-color: pink;
 }
 
-#appheadertop {
+#header-top {
   // background-color: orange;
 }
 
