--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -46,10 +46,10 @@ a:hover {
 }
 
 /* Header Styles */
-#appheader,
-#appheader a,
-#appheader a:visited,
-#appheader a:hover {
+#app-header,
+#app-header a,
+#app-header a:visited,
+#app-header a:hover {
   text-decoration: none;
 }
 
@@ -64,7 +64,7 @@ a:hover {
 }
 
 /* Submenublock */
-#carthead {
+#header-menu {
   line-height: 1.2em;
   font-weight: 400;
 
@@ -81,27 +81,27 @@ a:hover {
   }
 
   #breadcrumb,
-  #cartcount {
+  #cart-count {
     font-size: inherit;
     font-weight: inherit;
     line-height: inherit;
   }
 }
 
-#sidebarleft {
+#sidebar-menu {
   font-family: $font-leftlinks;
   font-size: $fontsize-leftlinks;
   font-weight: $fontweight-leftlinks;
   line-height: 1.5rem;
 
-  .leftlinks-collections,
-  .leftlinks-other {
+  .sidebar-menu-collections,
+  .sidebar-menu-links {
     li a {
       text-decoration: none;
     }
   }
 
-  .leftlinks-collections {
+  .sidebar-menu-collections {
     text-transform: lowercase;
   }
 }
