--- a/snippets/galleryproduct.liquid
+++ b/snippets/galleryproduct.liquid
@@ -1,6 +1,6 @@
 <div class="product">
 
-  {%- include 'banderola' -%}
+  {%- include 'banderoles' -%}
 
   {% if product.featured_image %}
     <div class="gallery-image">
