--- a/assets/css-colors-background.scss.liquid
+++ b/assets/css-colors-background.scss.liquid
@@ -1,4 +1,4 @@
-$color-appbody: {{ settings.color-appbody }};
+$color-app-body: {{ settings.color-app-body }};
 
 html {
   background-color: #f5f5f5;
@@ -10,6 +10,6 @@ html {
   background-color: white;
 }
 
-#appbody {
-  background-color: $color-appbody;
+#app-body {
+  background-color: $color-app-body;
 }
