--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,4 +1,4 @@
-<div id="frontbox">
+<div id="mainbox-frontpage">
   {% if blogs.frontpage.articles_count > 0 %}
     <div id="frontarticles">
       {% for article in blogs.frontpage.articles  %}
@@ -11,21 +11,15 @@
   {% endif %}
 
   {% for product in collections.frontcover.products %}
-    <!-- cover products -->
-    <div class="coverproduct">
-      <!-- banderolas -->
+    <div class="product-featured">
+      <!-- banderole -->
       {% for collection in product.collections %}
         {% case collection.handle %}
           {% when 'new' %}
-            <img class="new" src="{{ 'new5k.svg' | asset_url }}" alt="new" height="107" width="107"/>
-          {% when 'soon' %}
-            <img class="new" src="{{ 'soon01k.png' | asset_url }}" alt="soon" />
-          {% when 'pre-order' %}
-            <img class="newbig" src="{{ 'PREORDERBANNER-02k-2x.png' | asset_url }}" alt="pre-order" />
+            <img class="banderole-new " src="{{ 'new5k.svg' | asset_url }}" alt="new" height="107" width="107"/>
           {% else %}
         {% endcase %}
       {% endfor %}
-      <!-- cover product image -->
       <div class="coverpic">
         <a href="{{product.url}}" title="{{ item.title }}">
            <img class="bigsquare" src="{{ product.featured_image | product_img_url: 'original'}}" alt="{{product.title}}" />
