more lowercase-hyphen css names

--- a/assets/css-cart.scss.liquid
+++ b/assets/css-cart.scss.liquid
@@ -36,7 +36,7 @@ $cell-margin-4x: $cell-margin * 4;
     border-bottom: 1px dashed #ccc;
     margin: 0;
 
-    .thumb {
+    .cart-product-thumb {
       float: left;
       display: table;
       margin: 0;
@@ -45,7 +45,7 @@ $cell-margin-4x: $cell-margin * 4;
       padding: 0;
     }
 
-    .producttitle {
+    .cart-product-title {
       display: inline;
       float: left;
       margin-left: $cell-margin;
@@ -106,7 +106,7 @@ $cell-margin-4x: $cell-margin * 4;
   width: 100%;
 }
 
-#line-items li .thumb a:hover {
+#line-items li .cart-product-thumb a:hover {
   border-color: dodgerblue;
 }
 
