--- a/assets/css-colors.scss.liquid
+++ b/assets/css-colors.scss.liquid
@@ -86,7 +86,7 @@ a:hover {
   color: $color-header-cart-text;
 
   #line-items {
-    .producttitle a {
+    .cart-product-title a {
       color: inherit;
     }
   }
@@ -205,11 +205,11 @@ ul#variants label {
   color: grey;
 }
 
-#productpage #description a {
+#productpage #product-description a {
   color: $color-link;
 }
 
-#productpage #description #details {
+#productpage #product-description #details {
   background-color: #edece6;
   color: grey;
 }
@@ -223,30 +223,30 @@ ul#variants label {
 }
 
 /* Footer */
-#footer {
+#footer-box {
   color: $color-header-cart-text;
   background-color: $color-header-cart;
   border-top-color: #dfdcd7;
 }
 
-#footer #searchform #s {
+#footer-box #searchform #s {
   border: #f6f6f6;
 }
 
-#footer a {
+#footer-box a {
   color: $color-footer;
 }
 
-#footer #searchform #s {
+#footer-box #searchform #s {
   color: $color-footer;
   background-color: rgba(255, 255, 255, 0.5);
 }
 
-#footer #footertxt {
+#footer-box #footertxt {
   color: $color-footer;
 }
 
-#footer .spacedot {
+#footer-box .spacedot {
   color: blue;
   background-color: orange;
 }
