--- a/assets/css-layout.scss.liquid
+++ b/assets/css-layout.scss.liquid
@@ -311,7 +311,7 @@ ul#variants li label {
   margin: $cell-margin-half 0 0 0;
 }
 
-#sidebarright {
+#sidebar-product {
   box-sizing: border-box;
   padding: $cell-margin;
   display: flex;
@@ -336,8 +336,8 @@ ul#variants li label {
     flex-direction: column;
   }
 
-  #productcontrols,
-  #description {
+  #product-controls,
+  #product-description {
     box-sizing: border-box;
     width: $cell;
     padding: $cell-margin-2x;
@@ -345,7 +345,7 @@ ul#variants li label {
     border-left: 1px dashed $color-line;
   }
 
-  #productcontrols {
+  #product-controls {
     .producttopinfo,
     .producttopinfosold {
       width: 100%;
@@ -471,7 +471,7 @@ ul#variants li label {
     }
 }
 
-#footer {
+#footer-box {
   margin: 0;
   clear: left;
   width: 100%;
@@ -512,7 +512,7 @@ ul#variants li label {
   }
 }
 
-#footer .spacedot {
+#footer-box .spacedot {
   vertical-align: top;
   visibility: hidden;
   line-height: 36px;
