--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -1,4 +1,4 @@
-<div id="footer">
+<div id="footer-box">
   <form id="searchform" method="get" action="/search">
     <input type="text" value="Search" name="q" id="s" size="24" onfocus="clearMe(this)"/>
   </form>
