--- a/snippets/sidebarproduct.liquid
+++ b/snippets/sidebarproduct.liquid
@@ -6,8 +6,8 @@
   }
 </script>
 
-<div id="sidebarright">
-  <div id="productcontrols">
+<div id="sidebar-product">
+  <div id="product-controls">
     <div class="producttopinfo">
       <h2 class="productinfo">{{ product.title }}</h2>
     </div>
@@ -74,7 +74,7 @@
     {% endcase %}
   </div>
 
-  <div id="description">
+  <div id="product-description">
       {{ product.description }}
   </div>
 </div>
