--- a/assets/css-debug.scss.liquid
+++ b/assets/css-debug.scss.liquid
@@ -37,7 +37,7 @@
 //   .thumb {
 //     background-color: rgba(255, 10, 255, 0.5);
 //   }
-//   .producttitle {
+//   .cart-product-title {
 //     background-color: rgba(10, 255, 255, 0.5);
 //   }
 //   .quantities {
