--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -300,7 +300,7 @@ a:hover.shipinfo {
 }
 
 /* Footer */
-#footer {
+#footer-box {
   font-size: 1.5rem;
   line-height: 2rem;
   font-family: $body-font;
