new custom logo font 'Obey', better (hypened) names for classes an ids

--- a/assets/css-buttons.scss.liquid
+++ b/assets/css-buttons.scss.liquid
@@ -8,8 +8,8 @@ $cell-margin-half: $cell-margin * 0.5;
 $cell-margin-2x: $cell-margin * 2;
 $cell-margin-3x: $cell-margin * 3;
 
-.checkoutbutton,
-.updatebutton,
+.cart-checkout-button,
+.cart-update-button,
 .buybutton,
 .linkbutton,
 .soldbutton,
@@ -22,7 +22,7 @@ $cell-margin-3x: $cell-margin * 3;
 }
 
 
-.checkoutbutton {
+.cart-checkout-button {
   background-color: $color-link;
   color: white;
   border: none;
@@ -41,7 +41,7 @@ $cell-margin-3x: $cell-margin * 3;
   }
 }
 
-.updatebutton {
+.cart-update-button {
   background-color: $color-black;
   opacity: 0.2;
   color: white;
