--- a/assets/css-colors.scss.liquid
+++ b/assets/css-colors.scss.liquid
@@ -92,11 +92,11 @@ a:hover {
   }
 }
 
-.checkoutrow .mdi-creditcard {
+.checkout-row .icon-creditcard {
   color: $color-link;
 }
 
-.cartbanner {
+.cart-banner {
   color: $color-header-cart-text;
 }
 
