--- a/assets/css-layout.scss.liquid
+++ b/assets/css-layout.scss.liquid
@@ -207,7 +207,7 @@ $color-related: #6a6858;
     margin: 0 0 $cell-margin-3x 0;
     padding: $cell-margin-2x $cell-margin $cell-margin-2x $cell-margin-2x;
     box-sizing: border-box;
-    border-bottom: 1px solid $color-line;
+    border-bottom: 1px dashed $color-black;
   }
 
   .textile {
