--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -113,6 +113,7 @@
           {% if cart.item_count != 0 %}
             {% include 'cartrelated' %}
           {% endif %}
+          {% include 'footer' %}
         {% else %}
           {% include 'footer' %}
       {% endcase %}
