--- a/snippets/sidebarmenu.liquid
+++ b/snippets/sidebarmenu.liquid
@@ -11,13 +11,13 @@
   <hr/>
   <ul class="sidebar-menu-links">
     <li class="exlink">
-      <a href="https://db.eboy.com/" target="_blank" class="mdi-database">Portfolio</a>
+      <a href="https://db.eboy.com/" target="_blank" class="icon-database">Portfolio</a>
     </li>
     <li class="exlink">
-      <a href="https://twitter.com/eboyarts/" target="_blank" class="mdi-twitter">Twitter</a>
+      <a href="https://twitter.com/eboyarts/" target="_blank" class="icon-twitter">Twitter</a>
     </li>
     <li class="exlink">
-      <a href="https://www.instagram.com/eboyarts/" target="_blank" class="mdi-instagram">Instagram</a>
+      <a href="https://www.instagram.com/eboyarts/" target="_blank" class="icon-instagram">Instagram</a>
     </li>
   </ul>
 </div>
