--- a/assets/css-debug.scss.liquid
+++ b/assets/css-debug.scss.liquid
@@ -40,7 +40,7 @@
 //   .cart-product-title {
 //     background-color: rgba(10, 255, 255, 0.5);
 //   }
-//   .quantities {
+//   .cart-product-quantity {
 //     background-color: rgba(255, 255, 10, 0.5);
 //   }
 // }
