--- a/snippets/headermenu.liquid
+++ b/snippets/headermenu.liquid
@@ -18,5 +18,5 @@
 
     {% endcase %}
   </h3>
-  <h3 id="cart-count"><a href="/cart" class="mdi-cart"></a>{{ cart.item_count }}</h3>
+  <h3 id="cart-count"><a href="/cart" class="icon-cart"></a>{{ cart.item_count }}</h3>
 </div>
