better product text layout, now with h3 section headers
- also increased app top header height to 9 rem to sync with db layout

--- a/assets/css-appheader.scss.liquid
+++ b/assets/css-appheader.scss.liquid
@@ -26,6 +26,7 @@ $cell-margin-8x: $cell-margin * 8;
     margin: 0;
     box-sizing: border-box;
     text-align: left;
+    height: 9rem;
 
     #logotype {
       padding: 0;
