--- a/assets/css-buttons.scss.liquid
+++ b/assets/css-buttons.scss.liquid
@@ -63,7 +63,7 @@ $cell-margin-3x: $cell-margin * 3;
   color: white;
   border: none;
   padding: $cell-margin-2x $cell-margin-half;
-  margin: $cell-margin-2x 0 0 0;
+  margin: $cell-margin-2x 0;
   text-align: center;
   text-decoration: none;
   display: inline-block;
