updated font with new 'Y', removed unused asset files

--- a/assets/css-typography.scss.liquid
+++ b/assets/css-typography.scss.liquid
@@ -31,7 +31,7 @@ $color-product-h3: #f0f;
 // Load local fonts
 @font-face {
   font-family: "Obey";
-  src: url("Obey-Regular.otf");
+  src: url("Obey-Regular-01.otf");
   font-weight: normal;
   font-style: normal;
 }
